tempfile/async-stream/tests/ui/yield_in_nested_fn.rs
use async_stream::stream;

fn main() {
    stream! {
        fn foo() {
            yield "hello";
        }
    };
}
